--- a/app/styles/_components/_links.scss
+++ b/app/styles/_components/_links.scss
@@ -6,6 +6,7 @@
 a {
   color: $colorLink;
   text-decoration: none;
+  transition: all 0.15s ease-in-out;
   &:hover,
   &:focus {
     color: darken($colorLink, 15%);
