--- a/app/styles/_utilities/_classes-spacing.scss
+++ b/app/styles/_utilities/_classes-spacing.scss
@@ -37,6 +37,10 @@
   padding-top: 20px;
 }
 
+.pad-t--40 {
+  padding-top: 40px;
+}
+
 .pad-t--0 {
   padding-top: 0;
 }
@@ -58,6 +62,10 @@
   padding-bottom: 20px;
 }
 
+.pad-b--40 {
+  padding-bottom: 40px;
+}
+
 .pad-b--0 {
   padding-bottom: 0;
 }
@@ -65,6 +73,10 @@
 
 .pad-r {
   padding-right: $padding;
+}
+
+.pad-r--10 {
+  padding-right: 10px;
 }
 
 .pad-l {
